2017-08-22 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-34: New build rule checkdeps add to checkout
	project packages for changed tools

2017-08-10 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-33: Bug fixed for code-checks buildrule
	  - Do not fail if no changed file found for code-checks

2017-08-09 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-31: Rename following build rules
	  apply-code-checks-on-changes -> code-checks
	  code-checks ->  code-checks-all

	* V05-05-30: Added new build rule apply-code-checks-on-changes
	to apply code-checks on changed files only using
	    git diff --name-only $CMSSW_VERSION

	* V05-05-29: update for clang-tidy/format
	 - Use .clang-tidy and .clang-format files if avauilable
	 - Rename user parameters
	   - USER_CODE_CHECK_FILES  -> USER_CODE_CHECKS_FILES
	   - USER_CODE_CHECK_FILE   -> USER_CODE_CHECKS_FILE
	   - USER_STYLE_CHECKS      -> USER_CODE_CHECKS
	   - USER_STYLE_CHECK_ARGS  -> USER_CODE_CHECKS_ARGS
	   - USER_STYLE_APPLY_ARGS  -> USER_CODE_CHECKS_APPLY_ARGS
	   - USER_FORMAT_CHECK      -> USER_CODE_FORMAT
	   - USER_FORMAT_CHECK_ARGS -> USER_CODE_FORMAT_ARGS
	 - Added new user parameters
	   - USER_CODE_FORMAT_FILES: list of files for which to run format rules (SSV)
	   - USER_CODE_FORMAT_FILE: Filename which contains the list of files for
	which to run format rules

2017-08-08 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-28: update for clang-tidy/format
	- USER_CODE_CHECK_FILES: Filename which contains the list of files for
	which to run rules

2017-07-18 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-27: bug fix: fixed new build rules format/style 

2017-07-17 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-26: Added new style, format build rules to run clang-tidy and
	clang-format. Following user env variables can be used to override various
	default settings
	 - USER_CODE_CHECK_FILES: list of files for which to run rules (SSV)