@@ -1895,8 +1895,9 @@ project_help help_$(SCRAM_SOURCEDIR):
 	@$(CMD_echo) "code-checks"
 	@$(CMD_echo) "  Run clang-tidy (via code-checks-all build rule) on changed files w.r.t release"
 	@$(CMD_echo) "    By default it uses 'git diff --name-only TAG' to find the changed files."
-	@$(CMD_echo) "    One can set USER_FILES_CHANGED_COMMAND to provide the command to run to get"
-	@$(CMD_echo) "    changes files list (CSV of files under src tree)"
+	@$(CMD_echo) "    One can set USER_CODE_CHECKS_FILE to provide list of change files."
+	@$(CMD_echo) "    USER_CODE_CHECKS_CHANGE_ONLY can be set to apply changes only for changed files i.e."
+	@$(CMD_echo) "    no un-touched included headers files will be changed."
 	@$(CMD_echo) ""
 	@$(CMD_echo) "code-checks-dump-config"
 	@$(CMD_echo) "  Dump the clang-tidy config"
